[gd_scene load_steps=10 format=2]

[ext_resource path="res://customization_page/customization.gd" type="Script" id=1]
[ext_resource path="res://text_font/pixelmix_micro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://title_page/new_theme_for_gui.tres" type="Theme" id=3]
[ext_resource path="res://images/snake_skin/ball_3.png" type="Texture" id=4]
[ext_resource path="res://images/snake_skin/ball_4.png" type="Texture" id=5]
[ext_resource path="res://images/snake_skin/ball_2.png" type="Texture" id=6]
[ext_resource path="res://images/snake_skin/ball_1.png" type="Texture" id=7]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 2 )

[node name="customization" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 652.0
margin_top = 353.0
margin_right = 826.0
margin_bottom = 438.0
text = "change skin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball_1" type="TextureButton" parent="."]
margin_left = 233.0
margin_top = 130.0
margin_right = 301.0
margin_bottom = 199.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball1" type="Sprite" parent="Ball_1"]
position = Vector2( 40, 39 )
scale = Vector2( 0.146, 0.144 )
texture = ExtResource( 7 )

[node name="Ball_2" type="TextureButton" parent="."]
margin_left = 357.0
margin_top = 133.0
margin_right = 425.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball2" type="Sprite" parent="Ball_2"]
position = Vector2( 37, 34 )
scale = Vector2( 0.146, 0.144 )
texture = ExtResource( 6 )

[node name="Ball_3" type="TextureButton" parent="."]
margin_left = 471.0
margin_top = 133.0
margin_right = 539.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball3" type="Sprite" parent="Ball_3"]
position = Vector2( 32, 31 )
scale = Vector2( 0.146, 0.144 )
texture = ExtResource( 4 )

[node name="Ball_4" type="TextureButton" parent="."]
margin_left = 605.0
margin_top = 128.0
margin_right = 673.0
margin_bottom = 197.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball4" type="Sprite" parent="Ball_4"]
position = Vector2( 33, 36 )
scale = Vector2( 0.146, 0.144 )
texture = ExtResource( 5 )

[node name="Bk_to_main" type="Button" parent="."]
margin_left = 367.0
margin_top = 342.0
margin_right = 534.0
margin_bottom = 383.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Back to main menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Button" parent="."]
margin_left = 475.0
margin_top = 262.0
margin_right = 586.0
margin_bottom = 303.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Ball_1" to="." method="_on_Ball_1_button_down"]
[connection signal="button_down" from="Ball_2" to="." method="_on_Ball_2_button_down"]
[connection signal="button_down" from="Ball_3" to="." method="_on_Ball_3_button_down"]
[connection signal="button_down" from="Ball_4" to="." method="_on_Ball_4_button_down"]
[connection signal="button_down" from="Bk_to_main" to="." method="_on_Bk_to_main_button_down"]
[connection signal="button_down" from="Confirm" to="." method="_on_Confirm_button_down"]
